# Project_Airflow

./: Dockerfile  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: api_to_postgres.py  exampledag.py
include/: controller.py  db.py  models.py  schema.py
