[tool.poetry]
name = "project-airflow"
version = "0.1.0"
description = ""
authors = ["Lucas <lucasdastre10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
dotenv = "^0.9.9"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
